--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,13 @@
 site_name: Recipes
 
 nav:
-    - Welcome: index.md
+    - Welcome: 0_welcome.md # 0 so that its at the top of the folder
+    - Bone Marrow: bone_marrow.md
+    - Ceviche: ceviche.md
+    - Chili: chili.md
     - Egg Fried Rice: egg_fried_rice.md
+    - Goose Sous-vide: sous_vide_goose.md 
     - Tartare: tartare.md
-    - Goose Sous-vide: sous_vide_goose.md
 theme:
     name: null
     custom_dir: 'theme/'
