added fish tacos

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
     - Ceviche: ceviche.md
     - Chili: chili.md
     - Egg Fried Rice: egg_fried_rice.md
+    - Fish Tacos: fish_tacos.md
     - Pho Soup: pho_soup.md
     - Goose Sous-vide: goose_sous_vide.md 
     - Tartare: tartare.md
