Added fresh pasta

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
     - Chili: chili.md
     - Egg Fried Rice: egg_fried_rice.md
     - Fish Tacos: fish_tacos.md
+    - Fresh Pasta: fresh_pasta.md
     - Pesto: pesto.md
     - Pho Soup: pho_soup.md
     - Poke Bowl: poke_bowl.md
